// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerErrorInfo should render 1`] = `
<InfosMigration
  description={
    <React.Fragment>
      <WithStyles(Typography)
        className="u-error"
        gutterBottom={true}
        variant="h6"
      >
        error.job.LOGIN_FAILED.title
      </WithStyles(Typography)>
      <WithStyles(Typography)
        variant="body1"
      >
        <Markdown
          source="error.job.LOGIN_FAILED.description"
        />
      </WithStyles(Typography)>
    </React.Fragment>
  }
  theme="danger"
/>
`;

exports[`TriggerErrorInfo should render regular Error 1`] = `
<InfosMigration
  description={
    <React.Fragment>
      <WithStyles(Typography)
        className="u-error"
        gutterBottom={true}
        variant="h6"
      >
        error.job.UNKNOWN_ERROR.title
      </WithStyles(Typography)>
      <WithStyles(Typography)
        variant="body1"
      >
        <Markdown
          source="error.job.UNKNOWN_ERROR.description (Something is undefined)"
        />
      </WithStyles(Typography)>
    </React.Fragment>
  }
  theme="danger"
/>
`;
